fixed issue with z-index

--- a/client/src/components/cornerTile.css
+++ b/client/src/components/cornerTile.css
@@ -1,34 +1,16 @@
-/* CORNER 4 */
-
-.corner {
+.players-container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 15em;
+  flex-wrap: wrap;
+  position: absolute;
+  z-index: 100;
+}
+
+.corner-cont {
   width: 15em;
-  outline:1px solid black;
-  background-color: #BFDBAE;
-}
-
-.corner:hover {
-  opacity: 0.3;
-}
-
-.corner-style-container {
+  height: 15em;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 5em;
-}
-
-.go-text {
-  width: 2em;
-  transform-origin: 65px 35px;
-  transform: rotateZ(315deg);
-}
-
-.arrow {
-  width: 2.5em;
+  flex-direction: row;
+  position: relative;
 }
 
 /* CORNER 1 */
@@ -66,26 +48,63 @@
   transform: rotateZ(135deg);
 }
 
-/* CORNER 3 */
-
-.Corner3 {
-  width: 15em;
-  height: 15em;
-  outline:1px solid black;
-}
-
-.Corner3:hover {
-  opacity: 0.3;
-}
-
 /* CORNER 2 */
 
 .Corner2 {
   width: 15em;
   height: 15em;
   outline:1px solid black;
+  position: relative;
+  z-index: 1;
 }
 
 .Corner2:hover {
   opacity: 0.3;
+}
+
+/* CORNER 3 */
+
+.Corner3 {
+  width: 15em;
+  height: 15em;
+  outline:1px solid black;
+  position: relative;
+  z-index: 1;
+}
+
+.Corner3:hover {
+  opacity: 0.3;
+}
+  
+/* CORNER 4 */
+  
+.corner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 15em;
+  width: 15em;
+  outline:1px solid black;
+  background-color: #BFDBAE;
+}
+  
+.corner:hover {
+  opacity: 0.3;
+}
+  
+.corner-style-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 5em;
+}
+  
+.go-text {
+  width: 2em;
+  transform-origin: 65px 35px;
+  transform: rotateZ(315deg);
+}
+  
+.arrow {
+  width: 2.5em;
 }
